Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131397

WebEngineProfile doesn't instantiate in QML if property declarations are in a specific order

    XMLWordPrintable

Details

    • 3477d9525 (6.8.1), 0123553c4 (dev), d661a4c7e (6.8), 85ced310c (tqtc/lts-6.5)

    Description

      Declaring a WebEngineProfile like this:

      WebEngineProfile {
          storageName: 'Test'
          offTheRecord: false
      }

      ...will not work, whereas reversing the order of storageName and offTheRecord will:

      WebEngineProfile {
          offTheRecord: false
          storageName: 'Test'
      }

      As a result, existing applications will not have usable profiles.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            anualiyas Anu Aliyas
            kchehlarski Kaloyan Chehlarski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes